--- a/actu_f1_app/index.html
+++ b/actu_f1_app/index.html
@@ -2,12 +2,12 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="https://images.emojiterra.com/google/android-12l/512px/1f3ce.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pathway+Extreme:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&display=swap" rel="stylesheet"/>
-    <title>Vite App</title>
+    <title>Actu F1</title>
   </head>
   <body>
     <div id="app"></div>
